# src/controllers/eventController.js
@@ -1,4 +1,6 @@
 import eventService from '../services/eventService.js';
+import eventStatusService from '../services/eventStatusService.js';
+import axios from 'axios';
 
 const eventController = {
 
@@ -23,6 +25,28 @@ const eventController = {
     }
   },
 
+  // /**
+  //  * Get user events
+  //  * @route {GET} /events/my
+  //  * @param {string} id - The ID of the event
+  //  * @returns {Array} List of events
+  //  */
+  // async getUserEvents(req, res) {
+  //   try {
+  //     const events = await eventService.getUserEvents();
+
+  //     if (events == null || events.length === 0) {
+  //       return res.status(404).json({ message: 'No events found' });
+  //     }
+
+  //     res.status(200).json(events);
+
+  //   } catch (error) {
+  //     console.error(error);
+  //     res.status(500).json({ message: 'Error fetching events' });
+  //   }
+  // },
+
   /**
    * Get a specific event by ID
    * @route {GET} /events/:id
@@ -31,7 +55,6 @@ const eventController = {
    */
   async getEventById(req, res) {
     try {
-      console.log(req.params)
       const eventId = req.params.id;
       const event = await eventService.getEventById(eventId);
 
@@ -55,10 +78,15 @@ const eventController = {
    */
   async createEvent(req, res) {
     try {
-      console.log(req.body)
       const { userId, name, description, startAt, endAt, price, eventstatus_id } = req.body;
       if (!userId || !name || !description || !startAt || !endAt || !price || !eventstatus_id) {
         return res.status(400).json({ message: 'Missing required fields' });
+      }
+
+      const userExists = await axios.get(`http://userservice:5001/api/users/${userId}`);
+
+      if (!userExists) {
+        return res.status(404).json({ message: 'User not found' });
       }
 
       const newEvent = await eventService.createEvent(req.body);
@@ -97,6 +125,41 @@ const eventController = {
   },
 
   /**
+   * Update an event status
+   * @route {PUT} /events/:id/status
+   * @param {string} id - The ID of the event to update
+   * @returns {Object} The updated event
+   */
+  async updateEventStatus(req, res) {
+    try {
+      const eventId = req.params.id;
+
+      const eventStatusPending = await eventStatusService.getEventStatusByStatus('Pendente');
+      const eventStatusApproved = await eventStatusService.getEventStatusByStatus('Aprovado');
+
+      if (!eventStatusPending || !eventStatusApproved) {
+        return res.status(404).json({ message: 'Event status not found' });
+      }
+
+      const event = await eventService.getEventById(eventId);
+      if (!event) {
+        return res.status(404).json({ message: 'Event not found' });
+      }
+
+      if (event.eventstatus_id === eventStatusPending.eventStatusID) {
+        const updatedEvent = await eventService.updateEventStatus(eventId, eventStatusApproved.eventStatusID);
+        return res.status(200).json(updatedEvent);
+      }
+
+      return res.status(400).json({ message: 'Event status is not pending' });
+
+    } catch (error) {
+      console.error(error);
+      res.status(500).json({ message: 'Error updating event status' });
+    }
+  },
+
+  /**
    * Delete an event
    * @route {DELETE} /events/:id
    * @param {string} id - The ID of the event to delete
@@ -105,15 +168,15 @@ const eventController = {
   async deleteEvent(req, res) {
     try {
       const eventId = req.params.id;
-  
+
       const event = await eventService.getEventById(eventId);
       if (!event) {
         return res.status(404).json({ message: 'Event not found' });
       }
-  
+
       await eventService.deleteEvent(eventId);
-      res.status(204).send(); 
-  
+      res.status(204).send();
+
     } catch (error) {
       console.error(error);
       res.status(500).json({ message: 'Error deleting event' });
