# src/routes/routes.js
@@ -11,6 +11,7 @@ router.post('/events', eventController.createEvent);
 router.get('/events/:id', eventController.getEventById);
 router.put('/events/:id', eventController.updateEvent);
 router.delete('/events/:id', eventController.deleteEvent);
+router.put('/events/:id/status', eventController.updateEventStatus);
 
 router.get('/addressEvents', addressEventController.getAllAddressEvents)
 router.post('/addressEvents', addressEventController.createAddressEvent);
